--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,12 +28,19 @@ h2 {
   background: #000;
   display: flex;
   justify-content: space-between;
- 
 }
 .header-logo img {
   width: 230px;
   padding: 15px;
 }
+
+.header-menu {
+  display: block;
+}
+.tell-mini {
+ display: none;
+}
+
 
 .header-menu a {
   color: #f3f3f3;
@@ -133,7 +140,7 @@ h2 {
 }
 .productOrServeice img {
   width: 350px;
-  height: 270px;
+  height: 250px;
 }
 .productOrServeice-text {
   margin: 20px;
