--- a/CSS/style.css
+++ b/CSS/style.css
@@ -407,18 +407,32 @@ form p {
   font-size: 50px;
 }
 
+.header-text {
+  margin: auto;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
 .header-text-form {
   flex-direction: row;
   flex-wrap: wrap;
+  
 }
 
 .header-form {
-  margin-top: 50px;
+  -top: 50px;
+  margin: auto;
+  width: 700px;
 }
 
-form  p{
+form p{
+  margin-top: 50px;
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
+}
+
+.input-back {
+  font-size: 27px;
 }
 .entrance-btnw {
   font-size: 30px;
